2001-10-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-entity-regexp): Unified to the use of `regexp-opt';
	autoload regexp-opt for old Emacsen.

	* attic/regexp-opt.el: New file.

	* README.ja, README: Emacs-w3m requires the module regexp-opt.

	* w3m-weather.el: Autoload regexp-opt for old Emacsen.

2001-10-13  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-safe-url-regexp): New variable.
	(w3m-retrieve): When `w3m-safe-url-regexp' has non-nil value and
	it matches the requested URL, doesn't fetch its contents.

	* mime-w3m.el (mime-w3m-display-inline-image): New option.
	(mime-w3m-preview-text/html): In order to avoid web bug which is
	described in [mew-dist 19267], restrict accesible URLs.

	* mew-w3m.el (mew-mime-text/html-w3m): Likewise.

	* w3m-weather.el (w3m-weather-url-alist): Abolished.
	(w3m-weather-completion-table): New constant.
	(w3m-weather-default-area): Refer `w3m-weather-completion-table'
	instead of `w3m-weather-url-alist' to decide customize spec.
	(w3m-weather-input-history): New variable.
	(w3m-weather-input-area): New function.
	(w3m-weather-area-completion): Ditto.
	(w3m-weather): Call `w3m-weather-input-area'.
	(w3m-about-weather): Refer `w3m-weather-completion-table' instead
	of `w3m-weather-url-alist' to convert the area to the real URL.

2001-10-12  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-auto-insert-image): Change from 'defcustom'
	to 'defconst' and default value to 'nil'.
	(mew-w3m-view-inline-image): New function.

2001-10-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-input-url): Accept the 3rd optional argument.
	(w3m): Improved interactive form.

2001-10-12  Yuuichi Teranishi  <teranisi@gohome.org>,
	    TSUCHIYA Masatoshi <tsuchiya@namazu.org>

	* w3m-e21.el (w3m-form-button-keymap): Renamed from
	`w3m-widget-keymap'.
	(w3m-form-make-button): Fixed.
	(w3m-setup-widget-faces): Revived.

2001-10-12  Katsumi Yamaoka  <yamaoka@jpl.org>
